--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --webpack",
-    "build": "next build --webpack",
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint"
   },
@@ -21,9 +21,5 @@
     "react-international-phone": "^4.3.0",
     "swiper": "^12.0.3",
     "zustand": "^5.0.8"
-  },
-  "devDependencies": {
-    "eslint": "^9",
-    "eslint-config-next": "16.0.1"
   }
 }
