--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^12.23.5",
     "gsap": "^3.13.0",
     "lenis": "^1.3.13",
+    "lottie-react": "^2.4.1",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
