--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@apollo/client": "^4.0.9",
     "@gsap/react": "^2.1.2",
+    "@react-three/drei": "9.102.6",
+    "@react-three/fiber": "8.15.19",
     "@hookform/resolvers": "^5.2.2",
     "@remixicon/react": "^4.6.0",
     "cross-fetch": "^4.1.0",
@@ -21,15 +23,16 @@
     "js-cookie": "^3.0.5",
     "lenis": "^1.3.13",
     "lottie-react": "^2.4.1",
-    "next": "16.0.1",
+    "next": "^15.2.2",
+    "react": "^18.3.1",
     "nimbbl_sonic": "^6.2.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.66.1",
     "react-international-phone": "^4.3.0",
     "react-toastify": "^11.0.5",
     "swiper": "^12.0.3",
+    "three": "0.142.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
